--- a/app/src/main/res/layout/activity_geo.xml
+++ b/app/src/main/res/layout/activity_geo.xml
@@ -21,10 +21,12 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:id="@+id/boton_cierto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/texto_boton_cierto"/>
         <Button
+            android:id="@+id/boton_falso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/texto_boton_falso"/>
