--- a/app/src/main/res/layout/activity_geo.xml
+++ b/app/src/main/res/layout/activity_geo.xml
@@ -12,10 +12,11 @@
     tools:context="com.alejandroriosoviedo.android.geoapp.GeoActivity">
 
     <TextView
+        android:id="@+id/texto_pregunta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/texto_pregunta" />
+        android:text="@string/texto_pregunta_1" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -32,4 +33,9 @@
             android:text="@string/texto_boton_falso"/>
 
     </LinearLayout>
+    <Button
+        android:id="@+id/boton_siguiente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/texto_boton_siguiente"/>
 </LinearLayout>
